# EasySteer

./: .gitignore  .gitmodules  LICENSE  README.md  README_zh.md  __init__.py  pyproject.toml  setup.py  thinking_switch_ans.py  thinking_switch_test.ipynb  thinking_switch_vector.py  thinking_switch_vector_jsonl.py
easysteer/reft/: basic_demo.py  ssv.py  test_demo.py
easysteer/steer/: README.md  __init__.py  eleuther_sae.py  gemmascope_sae_diffmean.py  lat.py  linear_probe.py  pca.py  sae.py  unified_interface.py  utils.py
examples/: generate_jsonl.py  steer.py
experiment/efficiency/: easysteer_multi.ipynb  easysteer_single.ipynb  pyreft.ipynb  pyreft_batch.ipynb  repeng.ipynb  repeng_batch.ipynb  vllm_baseline.ipynb
experiment/hallucination/: baseline.ipynb  data.ipynb  eval.ipynb  mc_task.json  steer.ipynb
experiment/math/: baseline.ipynb  data_construction.ipynb  execution_avg_vector.gguf  reflection_avg_vector.gguf  steer.ipynb  transition_avg_vector.gguf
frontend/: README.md  app.py  chat_api.py  demo_training.py  extraction_api.py  i18n.js  index.html  inference_api.py  personality_diffmean_control_vector.gguf  requirements.txt  sae_api.py  script.js  start.bat  start.sh  start_server.py  style.css  training_api.py
hidden_states/: __init__.py
hidden_states/adapters/: base.py
reft/: basic_demo.py  ssv.py  test_demo.py
steer/: README.md  diffmean.py  sae.py  unified_interface.py
vectors/: diffmean.gguf  golden-diffmean.gguf  golden-pca.gguf  lat.gguf  pca.gguf  probe.gguf  sae.gguf  thinking_switch_pca_GSM8K.gguf  thinking_switch_pca_MATH-500.gguf
(+188 files in other folders)
