[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easysteer"
version = "0.1.0"
description = "High-Performance LLM Steering Framework"
readme = "README.md"
authors = [
    {name = "ZJU-REAL", email = "example@example.com"}
]
license = {text = "Apache License 2.0"}
requires-python = ">=3.10"
dependencies = [
    "scikit-learn",
    "datasets",
    "matplotlib",
    "accelerate",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["llm", "steering", "nlp", "machine learning", "deep learning"]

[project.urls]
Homepage = "https://github.com/ZJU-REAL/EasySteer"
Repository = "https://github.com/ZJU-REAL/EasySteer"

[tool.setuptools.packages.find]
where = ["."]
include = ["easysteer*"]
exclude = [] 